--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFiles": ["<rootDir>/test/jest.setup.js"]
   },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
@@ -13,6 +18,8 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
     "nodemon": "^3.1.11"
   }
 }
